2008-06-11 - Sean Huber (shuber@huberry.com)
	* Added url to http://github.com/shuber/curl

2008-06-10 - Sean Huber (shuber@huberry.com)
	* Initial import from svn